packages/contracts/test_result_final.txt
cargo :    Compiling 
outcome-manager v0.0.0 (C:\U
sers\HP\Desktop\BACKit-onSte
llar\packages\contracts\outc
ome_manager)
At line:1 char:1
+ cargo test --package 
outcome-manager 2>&1 | 
Out-File -FilePath test_r 
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~
    + CategoryInfo          
    : NotSpecified: (   Co  
  mpiling ou...utcome_man   
 ager):String) [], Remot    
eException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
error: cannot find 
attribute `contractimpl` in 
this scope
  --> outcome_manager\src\te
st.rs:16:3
   |
16 | #[contractimpl]
   |   ^^^^^^^^^^^^
   |
help: consider importing 
one of these attribute 
macros
   |
 3 + use 
crate::contractimpl;
   |
 3 + use 
soroban_sdk::contractimpl;
   |

error: cannot find 
attribute `contract` in 
this scope
  --> outcome_manager\src\te
st.rs:13:3
   |
13 | #[contract]
   |   ^^^^^^^^
   |
help: consider importing 
one of these attribute 
macros
   |
 3 + use crate::contract;
   |
 3 + use 
soroban_sdk::contract;
   |

warning: unused imports: 
`Bytes` and `Ledger`
 --> outcome_manager\src\tes
t.rs:4:31
  |
4 |     testutils::{Address 
as _, Ledger},
  |                         
      ^^^^^^
5 |     Address, Bytes, 
BytesN, Env, Vec,
  |              ^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused import: 
`Outcome`
 --> outcome_manager\src\tes
t.rs:9:22
  |
9 | use 
crate::storage::{Outcome, 
SignedOutcome};
  |                      
^^^^^^^

warning: unused import: 
`symbol_short`
  --> outcome_manager\src\li
b.rs:10:29
   |
10 |     contract, 
contractimpl, symbol_short, 
Address, BytesN, Env, 
IntoVal, Map, Vec, Symbol,
   |                        
     ^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::events:
:Events::publish`: use the 
#[contractevent] macro on a 
contract event type
 --> outcome_manager\src\eve
nts.rs:5:18
  |
5 |     
env.events().publish(
  |                  ^^^^^^^
  |
  = note: 
`#[warn(deprecated)]` on by 
default

warning: use of deprecated 
method `soroban_sdk::events:
:Events::publish`: use the 
#[contractevent] macro on a 
contract event type
  --> outcome_manager\src\ev
ents.rs:13:18
   |
13 |     
env.events().publish(
   |                  
^^^^^^^

warning: use of deprecated 
method `soroban_sdk::events:
:Events::publish`: use the 
#[contractevent] macro on a 
contract event type
  --> outcome_manager\src\ev
ents.rs:21:18
   |
21 |     
env.events().publish(
   |                  
^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
  --> outcome_manager\src\te
st.rs:73:27
   |
73 |     let contract_id = 
env.register_contract(None, 
OutcomeManager);
   |                        
   ^^^^^^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
  --> outcome_manager\src\te
st.rs:82:27
   |
82 |     let registry_id = 
env.register_contract(None, 
MockRegistry);
   |                        
   ^^^^^^^^^^^^^^^^^

error[E0277]: the trait 
bound `MockRegistry: 
ContractFunctionSet` is not 
satisfied
   --> outcome_manager\src\t
est.rs:82:51
    |
 82 |     let registry_id = 
env.register_contract(None, 
MockRegistry);
    |                       
    -----------------       
^^^^^^^^^^^^ unsatisfied 
trait bound
    |                       
    |
    |                       
    required by a bound 
introduced by this call
    |
help: the trait 
`ContractFunctionSet` is 
not implemented for 
`MockRegistry`
   --> outcome_manager\src\t
est.rs:14:1
    |
 14 | pub struct 
MockRegistry;
    | 
^^^^^^^^^^^^^^^^^^^^^^^
    = help: the trait 
`ContractFunctionSet` is 
implemented for 
`OutcomeManager`
note: required by a bound 
in `Env::register_contract`
   --> C:\Users\HP\.cargo\re
gistry\src\index.crates.io-1
949cf8c6b5b557f\soroban-sdk-
23.5.1\src\env.rs:829:37
    |
829 |     pub fn 
register_contract<'a, T: 
ContractFunctionSet + 
'static>(
    |                       
              
^^^^^^^^^^^^^^^^^^^ 
required by this bound in 
`Env::register_contract`

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
  --> outcome_manager\src\te
st.rs:96:27
   |
96 |     let contract_id = 
env.register_contract(None, 
OutcomeManager);
   |                        
   ^^^^^^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
   --> outcome_manager\src\t
est.rs:127:27
    |
127 |     let contract_id = 
env.register_contract(None, 
OutcomeManager);
    |                       
    ^^^^^^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
   --> outcome_manager\src\t
est.rs:146:27
    |
146 |     let contract_id = 
env.register_contract(None, 
OutcomeManager);
    |                       
    ^^^^^^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
   --> outcome_manager\src\t
est.rs:154:27
    |
154 |     let registry_id = 
env.register_contract(None, 
MockRegistry);
    |                       
    ^^^^^^^^^^^^^^^^^

error[E0277]: the trait 
bound `MockRegistry: 
ContractFunctionSet` is not 
satisfied
   --> outcome_manager\src\t
est.rs:154:51
    |
154 |     let registry_id = 
env.register_contract(None, 
MockRegistry);
    |                       
    -----------------       
^^^^^^^^^^^^ unsatisfied 
trait bound
    |                       
    |
    |                       
    required by a bound 
introduced by this call
    |
help: the trait 
`ContractFunctionSet` is 
not implemented for 
`MockRegistry`
   --> outcome_manager\src\t
est.rs:14:1
    |
 14 | pub struct 
MockRegistry;
    | 
^^^^^^^^^^^^^^^^^^^^^^^
    = help: the trait 
`ContractFunctionSet` is 
implemented for 
`OutcomeManager`
note: required by a bound 
in `Env::register_contract`
   --> C:\Users\HP\.cargo\re
gistry\src\index.crates.io-1
949cf8c6b5b557f\soroban-sdk-
23.5.1\src\env.rs:829:37
    |
829 |     pub fn 
register_contract<'a, T: 
ContractFunctionSet + 
'static>(
    |                       
              
^^^^^^^^^^^^^^^^^^^ 
required by this bound in 
`Env::register_contract`

For more information about 
this error, try `rustc 
--explain E0277`.
warning: `outcome-manager` 
(lib test) generated 12 
warnings
error: could not compile 
`outcome-manager` (lib 
test) due to 4 previous 
errors; 12 warnings emitted
